# svnbranch

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/LogWrapper/: LogWrapper.hpp
src/SettingsLoader/: SettingsLoader.cpp  SettingsLoader.hpp
